app/assets/stylesheets/launchpad.css.scss
$divider: "https://s3.amazonaws.com/moonlite-nsdub/static/divider.png";
$error_color: #971D1C;
$success_color: #62c462;

.launchpad {
  width:880px; 
  min-height:545px; 
  margin: 0px auto; 
  border: 10px solid rgba(43, 43, 43, 0.69); 
  text-align: left; 
  border-radius: 10px; 
  box-shadow: 0 0 50px 20px rgba(0, 0, 0, .05); 
  padding: 11px 11px 0 11px; 
  background-color: #F9F9F9;
  
  h1 { font: bold 23px 'MuliRegular', sans-serif; margin:0px; width:868px; padding:0px; }
  h1>img { border-radius:4px; height:36px; width:36px; }
  h1>div { position:relative; bottom:8px; display:inline;}
  
  .editor_view {
    margin-top:-15px;
    
    .radio { padding-left:35px; height:100%; }
    .error_message { float: left; color: #ee5f5b; font-size: 13px; display: none; width: 250px; }
    textarea { width: 100%; }
    form { padding:0 0 0 10px; margin-top: -10px; }
    form.form-horizontal { margin: 0; }
    form.form-horizontal label { display:inline-block; }
    form.form-horizontal input { margin: 5px 0 3px 0; margin-left:22px;}
    legend { margin-bottom: 10px; }
    a.next { margin-top: 5px; float: right; }
    .step1 fieldset { display: inline-block; margin-right:15px; width:58.1%; }
    .step2 {
      .btn-group { opacity: .7; margin: 6px 0 15px;  }
      .tip { margin-top: 6px; display: inline-block; }
    }
    .step3 {
      h4 { margin-top: 12px; font-size: 14px; }
      code.question { max-height: 60px; overflow-y: auto; }
      .correct_answer { font-weight: bold; font-size: 14px; }
    }
    .step4 {
      h4 { margin-top:12px; font-size:16px; }
    }
    .tips {
      display: inline-block;
      margin-left: 20px;
      vertical-align: top;
      width: 200px;
      border-left: 1px solid #E7E7E7;
      position: relative;
      top: 48px;
      padding-left: 10px;
      
      ul { font-size:13px; }
    }
  }

  .launchpadcontent { 
    margin-left: 0px; 
    margin-top:10px; 
    border-collapse:collapse;
    
    .launchpadcolumnheader {
      font-weight:bold; text-align: left; margin-bottom:10px;
      
      button { position:relative; top:5px; float:right;}
      ul.nav-tabs li { font-size: 14px; }
      ul.nav-tabs li a { border-bottom-color: transparent; cursor: pointer; }
    }
    
    .launchpadsectioncolumn {
      background-color: #F9F9F9;
      display: inline-block; 
      border-radius:6px; 
      border: 1px solid rgba(0, 0, 0, .1); 
      padding: 10px 5px 0 7px; 
      width: 21%; 
      vertical-align: top;
      overflow: auto; 
      height:470px;
      
      h3 { font-size: 16px; margin: 0 0 10px 0; font-weight: bold; line-height: 30px; }
      ul { margin: 0; }
      li {
        padding: 8px 0;
        border-bottom: 1px solid #EEE; 
        margin: 4px 0px; 
        list-style: none; 
        line-height: 28px;
        
        .pointsandprogress { display:inline-block; font-size:10px; font-style:italic; float:right; text-align:right; width:24%;}
        .pointsandprogress div { margin-bottom:-16px;}
        .active_section { font-weight: bold; }
      }
      a { font-size:14px; }
    }
    
    .sectioninfocontainer { 
      background-color:white; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1);  display:inline-block; width: 71%; height:460px; margin: 0 0 0 1%;  padding:10px;  overflow:auto;
      .tab_content table td { padding: 0px 10px 0px 10px; height: 40px; border: 0px; border-bottom: 1px solid #DDD; font-size:14px; }
      .tab_content table td p { margin-bottom: 0px; }
      .tabs > li > a:hover {cursor:pointer; }

      .tip { background-color: rgb(253, 240, 213);border-radius: 6px;margin-right: 12px;padding:3px 8px; margin-bottom:12px; }
      .tip img { width:15px; position:relative; bottom:2px; }
      .tip p { font-size: 14px; line-height: 18px; display:inline; }      
      
      .cr_create_tt .tooltip { top:172px !important; left:38px !important; }
      .arena_create_tt .tooltip { top:152px !important; left:39.5px !important; }
      .task_create_tt .tooltip { top:132px !important; right:-22px !important; left:72px !important; }
      
      .launchpadCRcolumn { 
        width: 100%; 
        display:inline-block; 
        vertical-align: top; 
        overflow:auto;
        
        table { width: 100%; }
        td.question_status { text-align: right; }
        pre { padding: 0; margin:0; word-break: normal; background-color: inherit; border: none; }
        img { display:inline; position:relative; height:17px; }
        .points { font-weight:bold; font-size:11px; white-space:nowrap; position:relative; top:2px; }
      }
    }
  }
  
  .headlines {
    background-color:white; 
    border: 1px solid rgba(0,0,0,.1);
    border-radius: 6px; 
    box-shadow: 0 6px 14px rgba(0, 0, 0, .1);
    margin: 20px auto 0 auto;
    padding: 10px 25px; 
    width: 75%;
    min-height: 275px;
    
    .header {
      img { height: 115px; margin: -13px 0 0 -10px; float: left }
      h1 { font-size: 45px; font-weight: normal; width: inherit; }
      h2 { font-size: 23px; line-height: 25px; }
    }
    .body { 
      margin: 20px auto; 
      .editor_view legend { display: none; }
      input.error { border-color: $error_color; }
      input.successful { border-color: $success_color; color: $success_color }
      p.error { color: $error_color; }
    }
    .exit {
      float: right; margin-top: 5px; text-decoration: none;
      a { font-size: 15px; }
    }
  }
}

.signup {
  text-align: center;
  
  .btn.danger { width:205px; padding-top:7px; padding-bottom:7px; }
  .btn.danger:first-child { margin-bottom: 12px; }
  .btn.danger img { height:30px; }
  .divider {
    background-image: url($divider);
    background-repeat: no-repeat;
    background-position: center 10px;
    width: 350px;
    margin: 15px auto;
  }
  form { margin-bottom: 0; }
  input { padding: 10px 15px; font-size: 16px; width: 180px; text-align: left; }
  input:nth-child(3) { margin-right:5px; margin-left:5px; }
}

